--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,10 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
-    "firebase-admin": "^11.10.1"
+    "express": "^4.18.2",
+    "firebase-admin": "^11.10.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
