--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,13 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase-admin": "^11.10.1",
-    "multer": "^1.4.5-lts.1"
+    "mammoth": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
